# DirectoryCompare

./: .gitignore  CMakeLists.txt
dirchecksum/: dirchecksum.cpp  shaf.cpp
dirchecksum/1path/: test.txt
dirchecksum/headers/: shaf.hpp
dircompare/: dircompare.cpp
src/: main.cpp  run.bat
